@@ -1,5 +1,5 @@
 /*******************************************************************************
- * Copyright (c) 2000, 2011 IBM Corporation and others.
+ * Copyright (c) 2000, 2015 IBM Corporation and others.
  * All rights reserved. This program and the accompanying materials
  * are made available under the terms of the Eclipse Public License v1.0
  * which accompanies this distribution, and is available at
@@ -79,7 +79,7 @@ class JavaStructureDiffViewer extends StructureDiffViewer implements IElementCha
 			boolean b= !JavaCompareUtilities.getBoolean(fCompareConfiguration, fPropertyKey, false);
 			setChecked(b);
 			if (fCompareConfiguration != null)
-				fCompareConfiguration.setProperty(fPropertyKey, new Boolean(b));
+				fCompareConfiguration.setProperty(fPropertyKey, Boolean.valueOf(b));
 		}
 
 		@Override
